# instantmc

./: .gitignore
control-code/api/: Cargo.toml  package-lock.json
control-code/api/src/: dns.rs  main.rs  minecraft_server.rs  tokio.rs
control-code/coredns/: .dockerignore  Corefile  Dockerfile  backup.yml  docker-compose.yml  master.db
docs/: index.html  style.css
runner-code/api/src/: firewall.rs  main.rs  minecraft_server.rs  temp.rs
runner-code/gate/: api.go  config.yml  docker-compose.yml  go.mod  go.sum
runner-code/gate/config/: config.yml
web/: index.html
