[package]
name = "instantmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
rand = { version = "0.8.5", features = ["small_rng"] }
redis = "0.23.3"
serde_json = "1.0.107"
